--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "blovegames",
   "version": "1.0.0",
   "main": "index.js",
- "scripts": {
-  "start": "node backend/server.js",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
+  "scripts": {
+    "start": "node backend/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.0",
+    "nodemailer": "^6.10.1",
     "uuid": "^11.1.0"
   }
 }
